<resources>
    <string name="app_name">Silent Phone</string>
    <string name="btnText">Toggle Silent Mode</string>
    <string name="add_widget">Add widget</string>
    <string name="menu_about">About</string>
    <string name="about">About</string>
    <string name="lblInform">Use the widget for a better experience</string>
    <string name="aboutText">Use the widget for toggle the silent mode of your device.</string>
    <string name="urlInstagram"><a href="https://www.instagram.com/matt_hco">Instagram</a></string>
    <string name="urlFacebook"><a href="https://www.facebook.com/profile.php?id=100003219533803">Facebook</a></string>
    <string name="email">matheus-1199@hotmail.com</string>
    <string name="banner_ad_unit_id">ca-app-pub-1541045839364233/4440267300</string>
</resources>
