<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.idownward.android.silentmodetoggle.AboutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/aboutText"
        android:textColor="@color/txtAboutColor"
        android:id="@+id/lblAbout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/urlInstagram"
        android:id="@+id/lblInstagram"
        android:layout_marginTop="68dp"
        android:layout_below="@+id/lblDevelopedBy"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/urlFacebook"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignTop="@+id/lblInstagram"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/lblFacebook" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email"
        android:id="@+id/lblEmail"
        android:autoLink="email"
        android:layout_above="@+id/lblInstagram"
        android:layout_marginBottom="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Developed by iDownward (Matheus Oliveira)"
        android:textColor="@color/txtAboutColor"
        android:id="@+id/lblDevelopedBy"
        android:layout_below="@+id/lblAbout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="80dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/intagram"
        android:layout_below="@+id/lblEmail"
        android:layout_alignLeft="@+id/lblInstagram"
        android:layout_alignStart="@+id/lblInstagram"
        android:layout_above="@+id/lblFacebook"
        android:layout_alignRight="@+id/lblInstagram"
        android:layout_alignEnd="@+id/lblInstagram" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/facebook"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblEmail"
        android:layout_alignRight="@+id/lblFacebook"
        android:layout_alignEnd="@+id/lblFacebook" />

</RelativeLayout>
